# PatchMatch

./: .gitignore  .gitmodules  AcceptanceTest.h  AcceptanceTestAcceptAll.h  AcceptanceTestComposite.h  AcceptanceTestDownsampledHistogram.h  AcceptanceTestHistogram.h  AcceptanceTestNeighborHistogram.h  AcceptanceTestSSD.h  AcceptanceTestSourceRegion.h  BDSInpainting.cpp  BDSInpainting.h  BDSInpaintingDemo.cpp  CMakeLists.txt  GeneralizedPatchMatch.h  GeneralizedPatchMatch.hpp  Initializer.h  InitializerBoundary.h  InitializerHistogram.h  InitializerKnownRegion.h  InitializerNeighborHistogram.h  InitializerRandom.h  Match.h  MatchSet.h  NNField.h  Neighbors.h  PatchMatch.cpp  PatchMatch.h  PatchMatch.hpp  PatchMatchDemo.cpp  PatchMatchHelpers.cpp  PatchMatchHelpers.h  PatchMatchHelpers.hpp  PatchMatchInitDemo.cpp  PatchMatchRings.h  PatchMatchRings.hpp  Process.h  Propagator.h  Propagator.hpp  PropagatorForwardBackward.h  (+6 more)
Drivers/: CMakeLists.txt  PatchMatch.cpp  PatchMatchRings.cpp
Examples/: CMakeLists.txt  GroundTruthNNField.cpp  PatchMatchDemo.cpp  PatchMatchInitDemo.cpp
GUI/: CMakeLists.txt  Coord.h  NNFieldInspector.cpp  NNFieldInspector.h  NNFieldInspector.ui  NNFieldInspectorDriver.cpp  Pane2D.cpp  Pane2D.h  PointSelectionStyle2D.cpp  PointSelectionStyle2D.h
Generalized/: MatchSet.h
Tests/: CMakeLists.txt  TestGeneralizedPatchMatch.cpp  TestPatchMatch.cpp  TestPatchMatchHelpers.cpp
Unused/: AcceptanceTest.h  AcceptanceTestAcceptAll.h  AcceptanceTestComposite.h  AcceptanceTestHistogram.h  AcceptanceTestSSD.h  AcceptanceTestSourceRegion.h  Initializer.h  InitializerNeighborHistogram.h  InitializerRandom.h  Process.h  PropagationAllowed.h  PropagatorForwardBackward.h  Verifier.h
data/: dog_small_TrivialNNField.mha
